# VenomStrike

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  venom.py
core/: attack_chain.py  auth_check.py  bayesian_scorer.py  confirmation.py  context_validator.py  database.py  engine.py  evidence.py  false_positive_filter.py  impact_analyzer.py  injection_context.py  logger.py  oob_verifier.py  param_deduplicator.py  payload_minimizer.py  payload_mutator.py  rate_limiter.py  raw_response.py  reporter.py  response_intelligence.py  sarif_reporter.py  scan_optimizer.py  scan_profiler.py  session.py  smart_selector.py  target.py  utils.py  validator.py  vulnerability_correlator.py  waf_evasion.py
debugger/: attack_explainer.py  code_fixer.py  learning_resources.py  owasp_mapper.py  prevention_guide.py  vuln_debugger.py
exploits/: base_exploiter.py
exploits/advanced/: api_key_exposure_exploiter.py  cache_poison_exploiter.py  crlf_exploiter.py  deserialization_exploiter.py  graphql_exploiter.py  host_header_exploiter.py  http2_desync_exploiter.py  parameter_tampering_exploiter.py  subdomain_takeover_exploiter.py  websocket_exploiter.py
exploits/auth/: account_takeover_exploiter.py  auth_bypass_exploiter.py  idor_exploiter.py  jwt_exploiter.py  oauth_exploiter.py  session_exploiter.py
exploits/client_side/: clickjack_exploiter.py  cors_exploiter.py  csrf_exploiter.py  open_redirect_exploiter.py  prototype_pollution_exploiter.py  xss_exploiter.py
exploits/injection/: cmd_exploiter.py  ldap_exploiter.py  nosql_exploiter.py  sqli_exploiter.py  ssti_exploiter.py  xpath_exploiter.py  (+1 more)
integrations/: __init__.py  amass_enum.py  cve_lookup.py  nmap_scanner.py  nuclei_runner.py  shodan_recon.py  wappalyzer_fingerprint.py  zap_scanner.py
recon/: attack_surface.py  endpoint_discovery.py  input_analyzer.py  param_extractor.py  tech_fingerprint.py
templates/: base.html  history.html  index.html  learning.html  results.html  terminal.html
tests/: __init__.py  test_chimera.py  test_config.py  test_evidence.py  test_hydra.py  test_injection_engine.py  test_integrations.py  test_phoenix.py  test_quantum.py  test_robustness.py  test_titan.py  test_utils.py
wordlists/: api_endpoints.txt  backup_files.txt  directories.txt  hidden_params.txt  subdomains.txt  user_agents.txt
(+59 files in other folders)
